--- a/frontend/.eslintrc.yml
+++ b/frontend/.eslintrc.yml
@@ -1,14 +1,21 @@
 env:
   browser: true
   es2021: true
-extends: airbnb-base
+extends:
+  - airbnb
+  - plugin:react/recommended
+  - plugin:react-hooks/recommended
 overrides: []
 parserOptions:
   ecmaVersion: latest
   sourceType: module
+  ecmaFeatures:
+        jsx: true,
+        modules: true
 rules:
   no-console: 0
   import/extensions:
     - error
     - ignorePackages
   import/no-extraneous-dependencies: ["error", {"devDependencies": true, "optionalDependencies": false, "peerDependencies": false}]
+  react/jsx-filename-extension: [1, { "extensions": [".js", ".jsx"] }]
