--- a/package.json
+++ b/package.json
@@ -13,6 +13,14 @@
   "license": "ISC",
   "dependencies": {
     "@hexlet/chat-server": "^2.0.0",
-    "caniuse-lite": "^1.0.30001655"
+    "axios": "^1.7.7",
+    "bootstrap": "^5.3.3",
+    "caniuse-lite": "^1.0.30001655",
+    "react-bootstrap": "^2.10.4"
+  },
+  "devDependencies": {
+    "babel-eslint": "^10.1.0",
+    "eslint-plugin-react": "^7.35.2",
+    "react-router-dom": "^6.26.1"
   }
 }
