--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "caniuse-lite": "^1.0.30001655",
-    "react-bootstrap": "^2.10.4"
+    "react-bootstrap": "^2.10.4",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
